--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         <div class="form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          <label class="form-check-label" for="exampleCheck1">Check me in</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
